# create-modular-monolith

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  LICENSE  MEMORY.md  README.md  index.js  package.json  pyproject.toml
additional-modules/: .npmignore  AGENTS.md  MEMORY.md
additional-modules/agent-capabilities/: README.md
additional-modules/agent-workflow/: README.md
additional-modules/agents/: AGENTS.md
additional-modules/buildplan/: agent_state.json  agent_state.sha256  context_budget.json
additional-modules/docs/: API.md  CHANGELOG.md  README.md
additional-modules/scripts/: measure_context.py  render_memory.py
additional-modules/ui-handoff-contract/: README.md
additional-modules/work-log/: README.md
lib/: init.js
phase_builder/phase_01/: state.py
scripts/: postinstall-message.mjs
template/: .gitignore  .npmignore  AGENTS.md  ARCHITECTURE_EXPORT_README.md  EXPORT_MANIFEST.json  LICENSE  MEMORY.md  NOTICE  README.md  package.json
template/.cursor/: hooks.json
template/backend/: .env.example  package-lock.json  package.json
template/docs/: API.md  CHANGELOG.md  PUBLISHING.md  README.md  STARTER_PACK.md
templates/: AGENTS.md.template
tests/: agent_capabilities_registry.test.js  agent_workflow_addon.test.js  agent_workflow_state_machine.test.js  agents_cache_rules.test.js  architecture_grounding.test.js  contract_gates.test.js  file_exchange_contracts.test.js  install_phase_builder.test.js  module_structure_cleanup.test.js  render_memory_cache.test.js  root_layout_contract.test.js  ui_handoff_contract.test.js
(+251 files in other folders)
